--- a/realm.css
+++ b/realm.css
@@ -1,10 +1,21 @@
-body 
+body
 {
-    background-color: #333333;
+	background-color: #1d1d1d;
+}
+p
+{
+	color: #cecece
+}
+button
+{
+	width: 100px;
+	height: 30px;
+	text-align: center;
+	background: #cecece;
 }
 .wizard
 {
-    position:absolute;
+	position:absolute;
 	width:46px;
 	height:46px;
 	animation:moveright 20s infinite;
@@ -13,7 +24,7 @@ body
 }
 .rogue
 {
-    position:absolute;
+	position:absolute;
 	width:46px;
 	height:46px;
 	animation:movehome 13s infinite;
@@ -22,13 +33,13 @@ body
 }
 .archershoot
 {
-    position:absolute;
+	position:absolute;
 	width:46px;
 	height:46px;
 }
 .doomarrow
 {
-    position:absolute;
+	position:absolute;
 	margin-left:50px;
 	width:28px;
 	height:28px;
@@ -38,27 +49,42 @@ body
 	-moz-animation:moveright .35s infinite;
 	-webkit-animation:moveright .35s infinite;
 }
+.topbar
+{
+	width: 100%;
+	height: 60px;
+	background: rgba(11, 118, 41, 0.761);
+	border-style: dotted;
+	border-color: #aeaeae;
+}
+.topbar-button
+{
+	width: 100px;
+	height: 30px;
+	
+	background: rgba(20, 230, 80, 0.761)
+}
 @-moz-keyframes moveright
 {
 	from
 	{
-        left: 0;
-    }
-    to 
+		left: 0;
+	}
+	to 
 	{
-        left: 90%;
-    }
+		left: 90%;
+	}
 }
 @-webkit-keyframes moveright
 {
 	from
 	{
-        left: 0;
-    }
-    to 
+		left: 0;
+	}
+	to 
 	{
-        left: 90%;
-    }
+		left: 90%;
+	}
 }
 @-moz-keyframes movehome
 {
